--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-import": "^2.14.0",
     "httpster": "^1.0.4",
-    "karma": "^3.0.0",
+    "karma": "^6.3.2",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
@@ -46,7 +46,7 @@
     "karma-sinon-chai": "^2.0.2",
     "karma-webpack": "^3.0.5",
     "mocha": "^5.2.0",
-    "runjs": "^4.3.2",
+    "tasksfile": "^5.1.1",
     "sinon": "^9.0.1",
     "sinon-chai": "^3.5.0",
     "standard-version": "^8.0.1",
